--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\State\UserStateProcessor:
+        arguments:
+            $passwordHasher: '@security.password_hasher'
+        tags:
+            - { name: 'api_platform.state.processor', resource_class: 'App\Entity\User' }
