--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=5afd25455dac86e5e84daff86ef8d08c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="root@127.0.0.1:3306/projectApi?serverVersion=8.0"
+DATABASE_URL="mysql://phpmyadmin:lolilol@127.0.0.1:3306/fin"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
