--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -3,11 +3,13 @@ api_platform:
     version: 1.0.0
     defaults:
         stateless: true
+        doctrine_orm:
+            enable_auto_persistence: true
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
     formats:
-        jsonld: ['application/ld+json']
         json: ['application/json']
+        jsonld: ['application/ld+json']
     swagger:
         api_keys:
             JWT:
